# sarawater

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  README.md  background.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  user-guide.html
.github/workflows/: black.yml  build.yml  release.yaml  release.yml
_sources/: background.rst.txt  installation.rst.txt  user-guide.rst.txt
_sources/tutorials/: index.rst.txt
docs/: requirements.txt
docs/source/: background.rst  conf.py  index.rst  quickstart.rst  user-guide.rst
docs/source/tutorials/: index.rst  tutorial_1_IHA.rst  tutorial_2_habitat.rst  tutorial_3_sedtrans.rst
sarawater/: Engelund_gauss_MPM_martin.ipynb  IHA.py  __init__.py  habitat.py  hydraulics.py  reach.py  scenarios.py  sediment_load.py  utils.py  visualization.py
tests/: test_export.py  test_habitat.py  test_hydraulics.py  test_iha.py  test_reaches.py  test_scenarios.py  test_sedload.py  test_visualization.py
tests/tests_data/: HQ_curves.txt  minimum_flow_requirements.csv
tutorial/tutorial_0_SARA-mini/: SARA-mini.ipynb
tutorial/tutorial_1_IHA/: tutorial_1_IHA.ipynb  tutorial_IHA.ipynb
tutorial/tutorial_1_IHA/data/: daily_discharge_7y.csv
tutorial/tutorial_2_habitat/: stylesheet.mplstyle  tutorial_2_habitat.ipynb  tutorial_habitat.ipynb
tutorials/: index.html  tutorial_1_IHA.html  tutorial_2_habitat.html  tutorial_3_sedtrans.html
tutorials/notebooks/: tutorial_0_SARA-mini.html  tutorial_1_IHA.html  tutorial_2_habitat.html
(+3 files in other folders)
