[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarawater"
version = "2.0.1"
dependencies = ["numpy", "matplotlib", "pandas", "openpyxl", "scipy"]

[project.optional-dependencies]
dev = ["pytest", "black"]
docs = ["ipykernel", "sphinx", "furo"]

[tool.setuptools]
packages = ["sarawater"]