[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarawater"
version = "2.1.0"
dependencies = ["numpy", "matplotlib", "pandas", "openpyxl", "scipy"]

[project.optional-dependencies]
dev = ["pytest", "black"]
docs = ["ipykernel", "sphinx", "furo"]

[tool.setuptools]
packages = ["sarawater"]